k8s-static/00.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: platform
  name: hello-world-k8s
