k8s-static/03.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-k8s-ingress
  namespace: hello-world-k8s
  labels:
    website: hello-world-k8s
  annotations:
    kubernetes.io/ingress.class: nginx-direct
spec:
  rules:
    - host: hello-world-k8s.dev.maersk-digital.net
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-k8s
              servicePort: 80
  tls:
    - hosts:
        - hello-world-k8s.dev.maersk-digital.net
      secretName: tls-wildcard-maersk-digital-net
